# SendMatrix-rust

./: .gitignore  LICENSE BSD 2-CLAUSE.md  LICENSE MIT.md
client/: Cargo.toml  README.md
client/src/: argv.rs  ipc.rs  main.rs
server/: Cargo.toml  README.md
server/src/: config.rs  ipc.rs  main.rs  matrix.rs  message.rs
